# embucket

./: .gitignore  .vale.ini  Cargo.toml  README.md  icehut_table_manifest.avro  snap-1736507513847000000-1e2a5607-9354-4a65-b5c8-4888034f5fd7-backup.avro  snap-1736507513847000000-1e2a5607-9354-4a65-b5c8-4888034f5fd7.avro  spark.py  test.py
.cargo/: config.toml
.github/scripts/: analyze_slt_coverage.py
.github/workflows/: build-and-release.yml.yml  check.yml  coverage.yml  docs-ci.yml  lambda-release.yml  tests.yml
config/: .env.example  .env.exmaple  diesel.toml  otel-example.yaml
config/layer-root/collector-config/: README.md  config.yml
cpp/velox_shim/: CMakeLists.txt  shim.cc  shim.h
cpp/velox_shim/include/: velox_shim.h
cpp/velox_shim/src/: velox_shim.cpp
crates/api-iceberg-rest/src/: error.rs
crates/api-internal-rest/src/: error.rs
crates/api-snowflake-rest/: Cargo.toml  README.md
crates/api-snowflake-rest-sessions/: Cargo.toml  README.md
crates/api-snowflake-rest-sessions/src/: error.rs  helpers.rs  layer.rs  lib.rs  session.rs
crates/api-snowflake-rest/src/: error.rs  lib.rs  models.rs  sql_state.rs
crates/api-snowflake-rest/src/server/: core_state.rs  error.rs  handlers.rs  helpers.rs  layer.rs  logic.rs  mod.rs  router.rs  server_models.rs  state.rs  test_server.rs
crates/api-snowflake-rest/src/tests/: .test_rest_api.rs.pending-snap  client.rs  create_test_server.rs  mod.rs  snow_sql.rs  sql_macro.rs  sql_test_macro.rs  test_abort_by_request_id.rs  test_gzip_encoding.rs  test_requests_abort.rs  test_rest_api.rs  test_stress.rs
crates/api-snowflake-rest/src/tests/snapshots/compatible/: alter_missing_table.snap  alter_table_db_missing.snap  alter_table_schema_missing.snap  chained_sqls-2.snap  chained_sqls-3.snap  chained_sqls.snap  create_table_bad_syntax.snap  create_table_missing_db.snap  create_table_missing_schema.snap  login_specified_params.snap  regression_bug_1662_ambiguous_schema.snap  regression_bug_591_date_timestamps.snap  select_1.snap  set_command_show_variables.snap  show_schemas_in_missing_db.snap  use_command_show_variables-2.snap  use_command_show_variables.snap
crates/api-snowflake-rest/src/tests/snapshots/custom_server/: query_timeout.snap  select_date_timestamp_in_arrow_format.snap
crates/api-snowflake-rest/src/tests/snapshots/known_issues/: select_from_missing_db.snap  select_from_missing_schema.snap  select_from_missing_table.snap  use_command_then_select.snap
crates/build-info/: Cargo.toml  build.rs
crates/build-info/src/: lib.rs
crates/catalog/: Cargo.toml  README.md
crates/catalog-metastore/: Cargo.toml  README.md
crates/catalog-metastore/src/: error.rs  global_settings.rs  lib.rs  metastore.rs  metastore_bootstrap_config.rs  metastore_config.rs  metastore_settings_config.rs
crates/catalog/src/: catalog.rs  catalog_list.rs  df_error.rs  error.rs  lib.rs  repository.rs  schema.rs  service.rs  snowflake_table.rs  table.rs  utils.rs
crates/control_plane/: Cargo.toml
crates/control_plane/src/: history.rs  lib.rs  service.rs
crates/core-executor/: Cargo.toml
crates/core-executor/examples/: flight_substrait_server.rs
crates/core-executor/src/: error.rs  lib.rs  query.rs  service.rs  session.rs  snowflake_error.rs  utils.rs
crates/core-metastore/src/: metastore.rs
crates/dev/: Cargo.toml
crates/dev/src/: main.rs
crates/df-builtins/: Cargo.toml
crates/df-builtins/src/: get_path.rs  insert.rs  lib.rs  strtok_to_array.rs
crates/df-catalog/src/: catalog_list.rs  error.rs  table.rs
crates/embucket-functions/: Cargo.toml
crates/embucket-functions/src/: lib.rs
crates/embucket-lambda/: .env.example  Cargo.toml  Makefile  README.md  private-api.cfn.yaml
crates/embucket-lambda/extensions/collector-config/: README.md
crates/embucket-lambda/src/: cache.rs  config.rs  main.rs  metastore_config.rs  tracing_setup.rs
crates/embucket-seed/: Cargo.toml  README.md
crates/embucket-seed/src/: cli.rs  external_models.rs  lib.rs  main.rs  seed_database.rs  static_seed_assets.rs  tests.rs
crates/embucket-seed/templates/: minimal_seed.yaml
crates/embucketd/: Cargo.toml
crates/embucketd/src/: cli.rs  main.rs  metastore_config.rs
crates/executor/: Cargo.toml  README.md
crates/executor/src/: dedicated_executor.rs  error.rs  error_code.rs  lib.rs  query.rs  (+10 more)
crates/functions/: Cargo.toml  README.md
crates/history/: Cargo.toml
crates/history/src/: history.rs  history_db.rs  lib.rs  store.rs
crates/nexus/: Cargo.toml
crates/queries/: Cargo.toml  README.md
crates/queries/migrations/initial_setup/: up.sql
crates/queries/src/: crud.rs  error.rs  lib.rs  operations.rs  tests.rs
crates/queries/src/models/: diesel_schema.rs  list_params.rs  mod.rs  query.rs  query_source.rs  query_status.rs  result_format.rs
crates/runtime/: Cargo.toml
crates/state-store/: Cargo.toml  README.md
crates/state-store/src/: config.rs  error.rs  lib.rs  models.rs  state_store.rs  state_store_dynamo.rs
crates/state-store/src/models/: mod.rs  queries.rs  sessions.rs
crates/state-store/src/storage_types/: mod.rs
crates/statestore/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  list_iterator.rs  scan_iterator.rs
crates/velox-ffi/: Cargo.toml  build.rs
crates/velox-ffi/src/: lib.rs
docs/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
docs/scripts/: validate-docs-smoke.mjs
test/: test_statistics.csv
test/crash_fuzzing_agent/: .env.example  BUG_REPRODUCTION.md  DEBUGGING_GUIDE.md  IMPROVED_QUERY_GENERATOR_GUIDE.md  README.md  SNOWFLAKE_TOOLS.md  VERBOSE_MODE.md  analyze_query_generation.py  example_reproduction_output.json  example_snowflake_usage.py  example_usage.py  fuzzing_agent.py  iterative_improvement_agent.py  requirements.txt  run_iterative_improvement.sh  test_agent_imports.py  test_build.py  test_build_with_existing.py  test_comprehensive_tool.py  test_database_setup.py  test_debug_build.py  test_improved_generator.py  test_random_query_generator.py  test_snowflake_tool.py  test_tools.py
tests/: conftest.py  test_ui_endpoints.py
utils/: upload.py
(+1131 files in other folders)
