[package]
name = "api-snowflake-rest-sessions"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
executor = { path = "../executor" }
error-stack-trace = { path = "../error-stack-trace" }
error-stack = { path = "../error-stack" }

axum = { workspace = true }
tower-sessions = { workspace = true }
tokio = { workspace = true }
time = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
