[package]
name = "api-snowflake-rest"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[features]
default = ["default-server"]
external-server = []
default-server = [
    "dep:api-snowflake-rest-sessions", 
    "dep:executor", 
    "dep:catalog-metastore", 
    "dep:tower-sessions",
    "dep:tower-http",
    "dep:axum",
    "dep:snafu",
    "dep:tracing",
    "dep:flate2",
    "dep:indexmap",
    "dep:datafusion",
    "dep:tower",
    "dep:strum"
]

[dependencies]
api-snowflake-rest-sessions = { path = "../api-snowflake-rest-sessions", optional = true }
executor = { path = "../executor", optional = true }
catalog-metastore = { path = "../catalog-metastore", optional = true }

error-stack-trace = { path = "../error-stack-trace" }
error-stack = { path = "../error-stack" }

tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry", "fmt", "json"] }

tower-sessions = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
snafu = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
flate2 = { version = "1", optional = true}
indexmap = { workspace = true, optional = true }
base64 = { version = "0.22" }
datafusion = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
strum = { workspace = true, optional = true }

serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
cfg-if = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
reqwest = { workspace = true }
http = { workspace = true }
arrow = "56.2.0"

[lints]
workspace = true
