[package]
name = "embucket-lambda"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
api-snowflake-rest = { path = "../api-snowflake-rest" }
api-snowflake-rest-sessions = { path = "../api-snowflake-rest-sessions" }
catalog-metastore = { path = "../catalog-metastore" }
executor = { path = "../executor" }
lambda_http = "0.17"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
base64 = "0.22"
serde_yaml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
http = { workspace = true }
http-body-util = "0.1"
serde_urlencoded = "0.7"
axum = { workspace = true }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tower = { workspace = true }
tower-http = { workspace = true }

[lints]
workspace = true
