[package]
name = "history"
version = "0.1.0"
edition = "2021"
license.workspace = true
license-file.workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
object_store = { workspace = true }
slatedb = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tracing = { workspace = true }

[lints]
workspace = true
