[package]
name = "queries"
version = "0.1.0"
edition = "2024"
license-file = { workspace = true }

[dependencies]
error-stack-trace = { path = "../error-stack-trace" }
error-stack = { path = "../error-stack" }

async-trait = { workspace = true }
chrono = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
cfg-if = { workspace = true }
deadpool = { version = "0.12.3" }
deadpool-postgres = "0.14.1"
deadpool-diesel = {  version = "0.6.1", features = ["postgres", "tracing"] }
diesel = { version = "2.3.3", features = ["postgres", "chrono", "uuid", "serde_json" ] }
diesel-async = { version = "0.7.4", features = ["postgres", "deadpool", "migrations", "tokio"] }
diesel_migrations = { version = "2.3.0", features = ["postgres"] }

[lints]
workspace = true
