[package]
name = "state-store"
version = "0.1.0"
edition = "2024"
license-file = { workspace = true }

[dependencies]
error-stack-trace = { path = "../error-stack-trace" }
error-stack = { path = "../error-stack" }

async-trait = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
serde = { workspace = true }
serde_json = {workspace = true}
snafu = { workspace = true }
chrono = { workspace = true }
mockall = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
