[package]
name = "velox-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[build-dependencies]
cc = "1.0"

[features]
default = []

[dependencies]
arrow = { version = "56.0.0", features = ["ffi"] }
arrow-schema = { version = "56.1.0" }
arrow-array = { version = "56.1.0", features = ["ffi"] }
datafusion = { version = "50.0.0" }
datafusion-substrait = { version = "50.0.0" }
bytes = "1"
thiserror = "1"
libloading = "0.8"


